--- a/resume.html
+++ b/resume.html
@@ -99,6 +99,7 @@
             <p><b>Title :</b>College Event Management System</p>
             <p><b>Objective  :</b>To develop a web-based platform that streamlines the organization and management of college events by enabling user-friendly event creation, student registration, and real-time data management for administrators</p>
             <p><b>Description :</b>The College Event Management System is a web application built with HTML, CSS, and JavaScript. Key features include:</p> 
+            <p>The College Event Management System is a full-stack web application built using the MERN Stack (MongoDB, Express.js, React.js, Node.js) that simplifies the entire lifecycle of organizing college events.</p>
     </div>
 
     <div>
